<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_add_to_calendar"
          android:title="@string/ctx_add_calendar"
          android:icon="@android:drawable/ic_menu_add" />
    <item android:id="@+id/menu_share"
          android:title="@string/menu_share"
          android:icon="@android:drawable/ic_menu_share" />
	<group android:id="@+id/grp_add">        
		<item android:id="@+id/menu_save_as_favorite"
	          android:title="@string/menu_save_as_favorite"
	          android:icon="@drawable/ic_menu_star" />
	</group>
	<group android:id="@+id/grp_remove">          
		<item android:id="@+id/menu_delete_favorite"
	          android:title="@string/menu_delete_favorite"
	          android:icon="@android:drawable/ic_menu_delete" />
    </group>  
	<item android:id="@+id/menu_check_for_spotify"
          android:title="Lyssna på Spotify"
          android:icon="@android:drawable/ic_lock_silent_mode_off" />
               
</menu>